<resources>
    <string name="app_name">Personal Record</string>
    <string name="activity_description">Choose how active you are.</string>

    <string-array name="ActivityLevel">
        <item>Light</item>
        <item>Moderate</item>
        <item>Frequent</item>
    </string-array>



    <string name="next_button">NEXT</string>
    <string name="save_button">SAVE</string>
    <string name="input_info">Input the following information:</string>
    <string name="age_input">Age (years)</string>
    <string name="activity_level">Select Activity Level:</string>
    <string name="height_input">Height:</string>
    <string name="feet_input">Feet (ft)</string>
    <string name="inches_input">Inches (in)</string>
    <string name="weight_input">Weight (lbs)</string>
    <string name = "feet_prompt">Feet:</string>
    <string name = "inches_prompt">Inches:</string>
    <string name="weightlabel">Weight (in lbs):</string>


    <string name="type_of_run">Select the type of run:</string>

    <string-array name="RunOptions">
        <item>Recovery</item>
        <item>Base</item>
        <item>Progression</item>
    </string-array>

    <string name="duration">Duration:</string>
    <string name="duration_input">Time (min)</string>
    <string name = "genrelabel">Select a genre of music:</string>
    <string name="run_options" />

    <string-array name="GenreOptions">
        <item>Classical</item>
        <item>Jazz</item>
        <item>Electronic</item>
        <item>Rock</item>
        <item>Alternative</item>
        <item>Hiphop</item>
        <item>Blues</item>
        <item>Anime</item>
        <item>Rap</item>
        <item>Country</item>
    </string-array>


    <string name="start_a_run">START A RUN</string>
    <string name="settings">SETTINGS</string>

    <string name = "submit_run">SUBMIT</string>

    <string name="playlistlabel">Your Personalized Playlist:</string>

    <string name = "ageprompt">Age (in years):</string>
    <string name = "backtohome">Back to Home</string>

    <string name = "warning">Warning: Some songs may contain explicit content.</string>

</resources>