<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent"
    tools:context=".MainActivitySetup">


    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="577dp"
        android:layout_height="781dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304">

        <TextView
            android:id="@+id/AppName"
            android:layout_width="450sp"
            android:layout_height="100sp"
            android:layout_marginStart="61dp"
            android:layout_marginEnd="61dp"
            android:layout_marginBottom="40dp"
            android:background="@color/orange_red_crayola"
            android:fontFamily="@font/oswald"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/AgeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/input_info"
            android:textColor="@color/bittersweet"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/AgePrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"

            android:text="@string/ageprompt"
            android:textColor="@color/coral"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/editAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="25"
            android:ems="10"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/age_input"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="@color/atomic_tangerine"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/ActivityLevelLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/activity_level"
            android:textColor="@color/coral"
            android:textSize="23sp" />

        <Spinner
            android:id="@+id/editLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/activity_description"
            android:minHeight="50dp" />

        <TextView
            android:id="@+id/HeightLabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="200dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/height_input"
            android:textColor="@color/coral"
            android:textSize="23sp" />


        <TextView
            android:id="@+id/FeetPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:text="@string/feet_prompt"
            android:textColor="@color/coral"
            android:textSize="21sp" />

        <EditText
            android:id="@+id/editTextFeet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="84dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="5"
            android:ems="10"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/feet_input"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/atomic_tangerine"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/InchesPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:text="@string/inches_prompt"
            android:textColor="@color/coral"
            android:textSize="21sp" />


        <EditText
            android:id="@+id/editTextInches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="6"
            android:ems="10"
            android:hint="@string/inches_input"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="@color/atomic_tangerine"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/WeightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/weightlabel"
            android:textColor="@color/coral"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/editTextWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="125"
            android:ems="10"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/weight_input"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="@color/atomic_tangerine"
            android:textSize="22sp" />

        <Button
            android:id="@+id/savebutton"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100sp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/orange_red_crayola"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/save_button"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/editTextWeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/editTextWeight" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>